Fix mini container on mobile

--- a/public/static/css/app.css
+++ b/public/static/css/app.css
@@ -11362,9 +11362,16 @@ video {
 }
 
 .mini-container {
-  width: 66.666667%;
-  margin-left: auto;
-  margin-right: auto;
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
+@media (min-width: 768px) {
+  .mini-container {
+    width: 66.666667%;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 
 .content-area {
